@@ -3,8 +3,10 @@ Pending changes in the mainline
 
 General
 -------
+
 * C-Store SCU now gives priority to the preferred TransferSyntax proposed by the receiving SCP
   instead of Orthanc own AcceptedTransferSyntaxes.
+* Made the default SQLite DB more robust wrt future updates like adding new columns in DB.
 
 REST API
 --------
